src/test/ui/borrowck/borrow-raw-address-of-mutability.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/borrow-raw-address-of-mutability.rs:5:13
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
LL |     let y = &raw mut x;
   |             ^^^^^^^^^^ cannot borrow as mutable

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/borrow-raw-address-of-mutability.rs:11:17
   |
LL |     let x = 0;
   |         - help: consider changing this to be mutable: `mut x`
LL |     let mut f = || {
LL |         let y = &raw mut x;
   |                 ^^^^^^^^^^ cannot borrow as mutable

error[E0596]: cannot borrow `f` as mutable, as it is not declared as mutable
  --> $DIR/borrow-raw-address-of-mutability.rs:21:5
   |
LL |     let f = || {
   |         - help: consider changing this to be mutable: `mut f`
...
LL |     f();
   |     ^ cannot borrow as mutable

error[E0596]: cannot borrow `x` as mutable, as it is a captured variable in a `Fn` closure
  --> $DIR/borrow-raw-address-of-mutability.rs:29:17
   |
LL |         let y = &raw mut x;
   |                 ^^^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to accept closures that implement `FnMut`
  --> $DIR/borrow-raw-address-of-mutability.rs:28:21
   |
LL |       let f = make_fn(|| {
   |  _____________________^
LL | |         let y = &raw mut x;
LL | |     });
   | |_____^

error[E0596]: cannot borrow `x` as mutable, as it is a captured variable in a `Fn` closure
  --> $DIR/borrow-raw-address-of-mutability.rs:37:17
   |
LL |         let y = &raw mut x;
   |                 ^^^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to accept closures that implement `FnMut`
  --> $DIR/borrow-raw-address-of-mutability.rs:36:21
   |
LL |       let f = make_fn(move || {
   |  _____________________^
LL | |         let y = &raw mut x;
LL | |     });
   | |_____^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0596`.
